--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -25,23 +25,23 @@ jobs:
           CI: true
       - name: Test
         run: npm test
-  # publish:
-  #   name: Continuous Deployment
-  #   needs: test
-  #   if: github.ref == 'refs/heads/master'
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v1
-  #     - name: Setup Node.js
-  #       uses: actions/setup-node@v1
-  #       with:
-  #         node-version: '10'
-  #     - name: Install
-  #       run: npm install
-  #       env:
-  #         CI: true
-  #     - name: Semantic Release
-  #       run: npx semantic-release
-  #       env:
-  #         GH_TOKEN: ${{ secrets.SEMANTIC_GH_TOKEN }}
-  #         NPM_TOKEN: ${{ secrets.SEMANTIC_NPM_TOKEN }}
+  publish:
+    name: Continuous Deployment
+    needs: test
+    if: github.ref == 'refs/heads/master'
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: Setup Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: '10'
+      - name: Install
+        run: npm install
+        env:
+          CI: true
+      - name: Semantic Release
+        run: npx semantic-release
+        env:
+          GH_TOKEN: ${{ secrets.SEMANTIC_GH_TOKEN }}
+          NPM_TOKEN: ${{ secrets.SEMANTIC_NPM_TOKEN }}
