--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -22,9 +22,19 @@ jobs:
       - name: Install
         run: npm install
         env:
-          CI: true
+          CI: 'true'
+      - name: Code Climate - Setup
+        run: |
+          curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
+          chmod +x ./cc-test-reporter
+          ./cc-test-reporter before-build
       - name: Test
         run: npm test
+      - name: Code Climate - Report
+        if: success()
+        run: ./cc-test-reporter after-build
+        env:
+          CC_TEST_REPORTER_ID: ${{ secrets.CC_TEST_REPORTER_ID }}
   publish:
     name: Continuous Deployment
     needs: test
@@ -39,7 +49,7 @@ jobs:
       - name: Install
         run: npm install
         env:
-          CI: true
+          CI: 'true'
       - name: Semantic Release
         run: npx semantic-release
         env:
