--- a/renovate.json
+++ b/renovate.json
@@ -7,30 +7,29 @@
     "enabled": false
   },
   "masterIssue": true,
-  "masterIssueTitle": "Renovate Bot Dependencies Management",
+  "masterIssueTitle": "Renovate Bot - Dependencies Management",
   "rangeStrategy": "auto",
-  "schedule": ["every weekend"],
+  "schedule": ["before 3am on Monday"],
   "prCreation": "immediate",
+  "reviewers": ["dhedgecock"],
   "updateNotScheduled": true,
 
   "packageRules": [
     {
       "packagePatterns": ["*"],
       "commitMessagePrefix": "Chore: ",
+      "commitMessageAction": "Update",
+      "commitMessageTopic": "package {{depName}}",
       "commitMessageSuffix": " 🆙",
-      "minor": {
-        "groupName": "all non-major devDependencies",
-        "groupSlug": "all-minor-devDependencies"
-      }
+      "groupName": "dev dependencies"
     },
     {
       "depTypeList": ["dependencies"],
       "commitMessagePrefix": "Update: ",
+      "commitMessageAction": "Package",
+      "commitMessageTopic": "{{depName}} upgrades",
       "commitMessageSuffix": " 🆙",
-      "minor": {
-        "groupName": "all non-major dependencies",
-        "groupSlug": "all-minor-dependencies"
-      }
+      "groupName": "dependencies"
     }
   ]
 }
