--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "scripts": {
     "test": "npm run test:lint && npm run test:unit",
+    "test:format": "prettier --check '{docs,lib}/**/*.{md,mdx,js,json,scss}'",
     "test:lint": "NODE_ENV=test eslint --format=pretty index.js lib",
     "test:unit": "npx jest",
     "format": "prettier --write '*.{md,js,json}', '**/*.{md,js,json}'"
@@ -31,7 +32,7 @@
   "devDependencies": {
     "@crystal-ball/prettier-base": "1.6.0",
     "@crystal-ball/semantic-release-base": "2.4.0",
-    "eslint-config-eloquence": "12.9.1",
+    "eslint-config-eloquence": "12.10.0",
     "husky": "3.0.9",
     "jest": "24.9.0"
   },
@@ -42,7 +43,7 @@
   },
   "husky": {
     "hooks": {
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook"
+      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
     }
   },
   "prettier": "@crystal-ball/prettier-base",
