--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
   "license": "ISC",
   "scripts": {
     "test": "npm run test:lint && npm run test:unit",
-    "test:format": "prettier --check '{docs,lib}/**/*.{md,mdx,js,json,scss}'",
+    "test:format": "prettier --check index.js lib/**",
     "test:lint": "NODE_ENV=test eslint --format=pretty index.js lib",
     "test:unit": "npx jest",
-    "format": "prettier --write '*.{md,js,json}', '**/*.{md,js,json}'"
+    "format": "prettier --write index.js lib/**"
   },
   "dependencies": {
     "commitizen": "4.0.3",
