--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,15 +6,13 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
   push:
-    # Skip all pushes with tags in order to skip Semantic Release publish commits
-    tags-ignore:
-      - '*'
     branches:
       - master
 
 jobs:
   test:
     name: Continuous Integration
+    if: contains(github.event.head_commit.message, 'skip ci') == false
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
