--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -39,7 +39,7 @@ jobs:
   publish:
     name: Continuous Deployment
     if: github.ref == 'refs/heads/master' && contains(github.event.head_commit.message, 'skip ci') == false
-    needs: test
+    # needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
