--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -10,6 +10,13 @@ on:
       - master
 
 jobs:
+  skip:
+    name: CI Skip
+    if: contains(github.event.head_commit.message, 'skip ci')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Skip CI Commit
+        run: echo "Skip CI commit success"
   test:
     name: Continuous Integration
     if: contains(github.event.head_commit.message, 'skip ci') == false
@@ -39,7 +46,7 @@ jobs:
   publish:
     name: Continuous Deployment
     if: github.ref == 'refs/heads/master' && contains(github.event.head_commit.message, 'skip ci') == false
-    # needs: test
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
