--- a/package.json
+++ b/package.json
@@ -31,8 +31,9 @@
   },
   "devDependencies": {
     "@crystal-ball/prettier-base": "1.6.0",
-    "@crystal-ball/semantic-release-base": "2.11.0",
-    "eslint-config-eloquence": "12.19.0",
+    "@crystal-ball/semantic-release-base": "2.13.0",
+    "@types/jest": "25.1.2",
+    "eslint-config-eloquence": "13.0.2",
     "husky": "4.2.1",
     "jest": "25.1.0"
   },
