--- a/package.json
+++ b/package.json
@@ -51,5 +51,10 @@
     "extends": [
       "@crystal-ball/semantic-release-base"
     ]
+  },
+  "renovate": {
+    "extends": [
+      "github>crystal-ball/renovate-base:library"
+    ]
   }
 }
