--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "license": "ISC",
   "scripts": {
     "test": "npm run test:lint && npm run test:unit",
-    "test:lint": "NODE_ENV=test eslint --format=pretty --ext .js,.ts index.js lib",
+    "test:lint": "NODE_ENV=test eslint --format=pretty --ext .js,.ts index.js src",
     "test:unit": "npx jest",
     "format": "prettier --write '*.{js,json,md,ts}' '**/*.{js,json,md,ts}' !CHANGELOG.md"
   },
