--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -13,6 +13,10 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '12.16'
+      - uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: npm-${{ hashFiles('**/package.json') }}
       - name: Install
         run: CI=true npm install
       - name: Code Climate - Setup
