--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-# --- Ignore ---
+# Ignore Me!
+# -------------------------------------
 
 # Dependencies
 node_modules
-
-# Build output
-public
 
 # Test output
 coverage
