--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "license": "ISC",
   "scripts": {
+    "commit": "cz",
     "test": "npm run test:lint && npm run test:unit",
     "test:lint": "NODE_ENV=test eslint --format=pretty --ext .js,.ts index.js src",
     "test:unit": "npx jest",
@@ -30,21 +31,15 @@
   },
   "devDependencies": {
     "@crystal-ball/prettier-base": "2.6.0",
-    "@crystal-ball/semantic-release-base": "2.29.0",
+    "@crystal-ball/semantic-release-base": "2.30.0",
     "@types/jest": "26.0.22",
-    "eslint-config-eloquence": "17.8.0",
-    "husky": "5.2.0",
+    "eslint-config-eloquence": "18.2.0",
     "jest": "26.6.3"
   },
   "prettier": "@crystal-ball/prettier-base",
   "config": {
     "commitizen": {
       "path": "./index.js"
-    }
-  },
-  "husky": {
-    "hooks": {
-      "prepare-commit-msg": "exec < /dev/tty && git cz --hook || true"
     }
   },
   "release": {
